<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.main.ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/RoundedImage"
            android:src="@drawable/ic_avatar"
            />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nhật Quang"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgAvatar"
            android:fontFamily="@font/lansui"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/layoutInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/txtName">

            <ImageView
                android:id="@+id/imgCalender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuoi" />

            <ImageView
                android:id="@+id/imgHuman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_human" />

            <TextView
                android:id="@+id/txtHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chieu_cao" />

            <ImageView
                android:id="@+id/imgScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_scale" />

            <TextView
                android:id="@+id/txtWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/can_nang" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCalories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/layoutInfo">

            <!-- Dòng x/y calo -->
            <TextView
                android:id="@+id/txtProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lansui"
                android:text="@string/value_calo_progress"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Dòng calo còn lại -->
            <TextView
                android:id="@+id/txtRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lansui"
                android:text="@string/calo_can_nap"
                android:textColor="#201c1c"
                android:textSize="16sp" />
        </LinearLayout>

        <GridLayout
            android:id="@+id/layoutNutrition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:padding="16dp"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@id/layoutCalories">

            <!-- Ô 1: Chất béo -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_lipid"
                    android:contentDescription="@string/chat_beo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_beo"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_chat_beo"
                    android:textColor="#201c1c"
                    android:textSize="12sp"/>
            </LinearLayout>

            <!-- Ô 2: Chất xơ -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_fiber"
                    android:contentDescription="@string/chat_xo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_xo"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_chat_xo"
                    android:textColor="#201c1c"
                    android:textSize="12sp"/>
            </LinearLayout>

            <!-- Ô 3: Protein -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_protein"
                    android:contentDescription="@string/protein"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/protein"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_protein"
                    android:textColor="#201c1c"
                    android:textSize="12sp"/>
            </LinearLayout>

            <!-- Ô 4: Carbohydrate -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_sugar"
                    android:contentDescription="@string/carb"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carb"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_carb"
                    android:textColor="#201c1c"
                    android:textSize="12sp"/>
            </LinearLayout>

            <!-- Ô 5: Nước -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_water"
                    android:contentDescription="@string/water"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_water"
                    android:textColor="#201c1c"
                    android:textSize="12sp"/>
            </LinearLayout>

            <!-- Ô 6: Muối -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_salt"
                    android:contentDescription="@string/salt"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salt"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value_salt"
                    android:textColor="#201c1c"
                    android:textSize="12sp"/>
            </LinearLayout>

        </GridLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignOut"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:text="@string/dang_xuat"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_semibold"
            android:background="@drawable/btn_sign_out"
            app:layout_constraintTop_toBottomOf="@id/layoutNutrition"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="32dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>