<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.exercise.InfoExerciseActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chay_bo"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/luu"
        android:textSize="15sp"
        android:background="@android:color/transparent"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgView"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.64"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/RoundedImageExercises"
        app:srcCompat="@drawable/img_running" />

    <!-- Ô nhập khoảng cách -->
    <LinearLayout
        android:id="@+id/layoutDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/imgView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/khoang_cach"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/edtDistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="distance"
            android:inputType="numberDecimal"
            android:hint="@string/_0"
            android:textColorHint="@color/dark_gray"
            android:background="@null"
            android:textSize="16sp"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Gạch chân riêng -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/layoutDistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp" />


    <!-- Ô nhập thời gian -->
    <LinearLayout
        android:id="@+id/layoutTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/layoutDistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoi_gian"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/edtTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="time"
            android:inputType="number"
            android:hint="@string/_0"
            android:textColorHint="@color/dark_gray"
            android:background="@null"
            android:textSize="16sp"
            android:padding="4dp"
            android:textColor="@color/black"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phut"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Gạch chân thứ hai -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/layoutTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp" />

    <LinearLayout
        android:id="@+id/layoutCalories"
        android:layout_width="0dp"
        android:alpha="0.5"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/layoutTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calo_tieu_thu"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/dark_gray"
            android:layout_marginEnd="8dp" />

        <!-- TextView chỉ hiển thị -->
        <TextView
            android:id="@+id/txtCaloriesBurned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0"
            android:gravity="end"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kcal"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Gạch chân dưới Calo -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:alpha="0.5"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/layoutCalories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp" />

    <!-- Ô chọn mức độ -->
    <LinearLayout
        android:id="@+id/layoutLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@id/imgView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muc_do"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:boxBackgroundMode="none">

            <AutoCompleteTextView
                android:id="@+id/dropdownLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nghiep_du"
                android:textSize="16sp"
                android:gravity="end"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Gạch chân dưới Mức độ -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/layoutLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
